# fhir

./: .dockerignore  .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: bundle.rs  capability.rs  error.rs  lib.rs  outcome.rs
crates/pg-ext/: Cargo.toml  fhir_pg_ext.control
crates/pg-ext/src/: history.rs  lib.rs  schema.sql  search.rs  storage.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs
crates/server/src/ai/: chatbot.rs  client.rs  generator.rs  mod.rs  nl_search.rs
crates/server/src/db/: mod.rs  repository.rs
crates/server/src/middleware/: audit.rs  auth.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
crates/server/src/routes/: health.rs  metadata.rs  metrics.rs  mod.rs  operations.rs  patient.rs
crates/server/tests/: integration.rs
docker/postgres/: Dockerfile  init.sql
docker/server/: Dockerfile
docs/: README.de.md  README.zh.md
examples/: chat.sh  patient.json  search.sh
postman/: fhir.json
